# zecca

./: .gitignore  README.md  cache.py  demo.ipynb  demo.py  launch.sh  main.py  plotting.py  pyproject.toml  requirements.txt  strategy.py
.claude/: settings.json
alerting/: telegrambot.py
analysis/: mlflow_utils.py  training.py  utils.py
analysis/datasets/: stocks.py
analysis/db/: globals.py  queries.py
analysis/mlflow_scripts/: base_dt_price_classification.py
analysis/models/: cnn.py  dt_price_classifier.py
analysis/notebooks/: cnn_training.ipynb  dt_price_classification.ipynb  indicator_selection.ipynb  rf_price_classification.ipynb  rf_price_classification.py  symbol2vec.ipynb
analysis/return_classification/: common.py  decision_tree.py  random_forest.py
analysis/strategies/: adaptive_momentum.py  classic_momentum.py  reporting.py  strategy.py  utils.py
analysis/wallet/: simulated.py
configs/: config.yml  dev.yml  prod.yml
db/: globals.py  queries.py
docs/finance/: Assets.md  Indicators.md
etl/: config.py  downloads.py  etl.py  ingester.py  logger.py  sources.py  telegrambot.py  utils.py
etl/dbt/: dbt_project.yml  profiles.yml
etl/dbt/macros/: math.sql  (+5 more)
etl/ingestion/: injester.py  sec.py  yfinance.py
etl/transformation/: builder.py  candles_daily.py  company_tickers.py  indicators.py  model.py  sec_company_facts.py  sec_company_facts_padded.py  utils.py
grafana/: .gitignore  README.md  docker-compose.yml  seed_sample_data.py
ingestion/: ingester.py
telegrambot/: telegrambot.py
wallet/: __init__.py  interface.py  simulated.py
(+48 files in other folders)
