[project]
name = "zecca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "polars>=1.41.2",
    "pytelegrambotapi>=4.34.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "yfinance>=1.4.1",
]
